[package]
name = "pastatest"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_proofs = "=0.1.0-beta.2"
halo2_gadgets = "=0.1.0-beta.1"

# This compiles:
#[dependencies.pasta_curves]
#version = "0.3.0"

# This does not:
[dependencies.pasta_curves]
git = "https://github.com/zcash/pasta_curves"
tag = "0.3.0"
